--- a/ninebox.html
+++ b/ninebox.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>CSS.1</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!--viewport+content让页面在移动端自适应宽度，可以按照设定的范围进行缩放-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" charset="utf-8">
     <link rel="stylesheet" href="nine.css">
 </head>
 
