--- a/game.html
+++ b/game.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        body{
+        body {
             width: 100%;
             height: 100%;
         }
+        
         .item {
             position: absolute;
             top: 0;
@@ -17,42 +18,50 @@
     </style>
 </head>
 <body>
-<div id="a1" class="item">O</div>
+<div class="item">w</div>
 <script>
     var items = [];
     var speed = 1;
     var count = 4;
-    var clientWidth = document.documentElement.clientWidth-80;
+    var clientWidth = document.documentElement.clientWidth - 80;
     var clientHeight = document.documentElement.clientHeight;
 
-    var getRandomColor = function(){
-        return  '#' +
-            (function(color){
-                return (color +=  '0123456789abcdef'[Math.floor(Math.random()*16)])
-                && (color.length == 6) ?  color : arguments.callee(color);
+    var getRandomColor = function () {
+        return '#' +
+            (function (color) {
+                return (color += '0123456789abcdef'[Math.floor(Math.random() * 16)])
+                && (color.length == 6) ? color : arguments.callee(color);
             })('');
     }
+    /**
+     * 生成字母
+     */
     function generate() {
-        speed++;
+        if (speed < 23) {
+            speed++;
+        }
+
         items = document.getElementsByClassName('item');
         if (items.length < count) {
-            var item = items[0].cloneNode();
-            item.style.top = 0;
+//            var item = items[0].cloneNode();
+            var item = document.createElement('div');
+            item.className = 'item';
+            item.style.top = '-80px';
             item.style.color = getRandomColor();
             item.innerText = String.fromCharCode("A".charCodeAt(0) + Math.random() * 26);
             item.style.left = Math.random() * clientWidth + 'px';
-            items[0].parentNode.appendChild(item);
+//            items[0].parentNode.appendChild(item);
+            document.body.appendChild(item);
         }
     }
     function loop() {
         for (var index = 0; index < items.length; ++index) {
             var item = items[index];
             if (item.style.top == '' || parseInt(item.style.top) >= clientHeight) {
-                item.style.top = '0px';
+                item.style.top = '-80px';
             }
 
             item.style.top = (parseInt(item.style.top) + speed) + 'px';
-
         }
     }
 
@@ -63,13 +72,12 @@
         for (var index = 0; index < items.length; ++index) {
             var item = items[index];
             if (item.innerText.toUpperCase() == evt.key.toUpperCase()) {
-                if (items.length == 1) {
-                    generate();
-                }
+//                if (items.length == 1) {
+//                    generate();
+//                }
                 item.parentNode.removeChild(item);
             }
         }
-
     })
 </script>
 </body>
